@@ -26,20 +26,17 @@ import io.micronaut.inject.ast.ClassElement;
 import io.micronaut.inject.ast.ElementQuery;
 import io.micronaut.inject.ast.FieldElement;
 import io.micronaut.inject.ast.MethodElement;
-import io.micronaut.inject.ast.ParameterElement;
 import io.micronaut.inject.ast.PropertyElement;
 import io.micronaut.sourcegen.model.ClassTypeDef.ClassDefType;
 import io.micronaut.sourcegen.model.ClassTypeDef.ClassElementType;
 import io.micronaut.sourcegen.model.ExpressionDef.Lambda;
 import io.micronaut.sourcegen.model.MethodDef.MethodBodyBuilder;
-import io.micronaut.sourcegen.model.MethodDef.MethodDefBuilder;
 
 import javax.lang.model.element.Modifier;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -58,10 +55,12 @@ public sealed interface ExpressionDef
     permits ExpressionDef.ArrayElement, ExpressionDef.Cast, ExpressionDef.ConditionExpressionDef, ExpressionDef.Constant, ExpressionDef.GetPropertyValue, ExpressionDef.IfElse, ExpressionDef.InstanceOf, ExpressionDef.InvokeGetClassMethod, ExpressionDef.InvokeHashCodeMethod, ExpressionDef.InvokeInstanceMethod, ExpressionDef.InvokeStaticMethod, ExpressionDef.MathBinaryOperation, ExpressionDef.MathUnaryOperation, ExpressionDef.NewArrayInitialized, ExpressionDef.NewArrayOfSize, ExpressionDef.NewInstance, ExpressionDef.Switch, ExpressionDef.SwitchYieldCase, VariableDef, Lambda {
 
     /**
-     * Get the operands that the expression applies to.
-     * @return The operands
+     * All the expressions that are represented by this statement.
+     *
+     * @return The expressions
+     * @since 1.7
      */
-    Collection<? extends ExpressionDef> operands();
+    List<? extends ExpressionDef> expressions();
 
     /**
      * Check an array element.
@@ -653,6 +652,18 @@ public sealed interface ExpressionDef
     }
 
     /**
+     * The call the lambda expression.
+     *
+     * @param lambda    The lambda
+     * @param values    The parameters
+     * @return The call to the instance method
+     * @since 1.7
+     */
+    default InvokeInstanceMethod invoke(Lambda lambda, ExpressionDef... values) {
+        return invoke(lambda.target, values);
+    }
+
+    /**
      * The call the instance method expression.
      *
      * @param name      The method name
@@ -976,7 +987,7 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public List<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return values;
         }
     }
@@ -993,8 +1004,8 @@ public sealed interface ExpressionDef
     @Experimental
     record Cast(TypeDef type, ExpressionDef expressionDef) implements ExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(expressionDef);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(expressionDef);
         }
     }
 
@@ -1011,8 +1022,8 @@ public sealed interface ExpressionDef
                     @Nullable
                     Object value) implements ExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.emptyList();
+        public List<? extends ExpressionDef> expressions() {
+            return List.of();
         }
     }
 
@@ -1043,8 +1054,8 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            ArrayList<ExpressionDef> result = new ArrayList<>();
+        public List<? extends ExpressionDef> expressions() {
+            List<ExpressionDef> result = new ArrayList<>();
             result.add(instance);
             result.addAll(values);
             return result;
@@ -1077,7 +1088,7 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return values;
         }
 
@@ -1133,7 +1144,7 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(left, right);
         }
 
@@ -1177,7 +1188,7 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(left, right);
         }
 
@@ -1216,8 +1227,8 @@ public sealed interface ExpressionDef
     record MathUnaryOperation(OpType opType,
                               ExpressionDef expression) implements ExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(expression);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(expression);
         }
 
         @Override
@@ -1242,8 +1253,8 @@ public sealed interface ExpressionDef
     @Experimental
     record IsNull(ExpressionDef expression) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(expression);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(expression);
         }
     }
 
@@ -1256,8 +1267,8 @@ public sealed interface ExpressionDef
     @Experimental
     record IsNotNull(ExpressionDef expression) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(expression);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(expression);
         }
     }
 
@@ -1270,8 +1281,8 @@ public sealed interface ExpressionDef
     @Experimental
     record IsTrue(ExpressionDef expression) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(expression);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(expression);
         }
     }
 
@@ -1284,8 +1295,8 @@ public sealed interface ExpressionDef
     @Experimental
     record IsFalse(ExpressionDef expression) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(expression);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(expression);
         }
     }
 
@@ -1300,7 +1311,7 @@ public sealed interface ExpressionDef
     @Experimental
     record And(ConditionExpressionDef left, ConditionExpressionDef right) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(left, right);
         }
     }
@@ -1316,7 +1327,7 @@ public sealed interface ExpressionDef
     @Experimental
     record Or(ConditionExpressionDef left, ConditionExpressionDef right) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(left, right);
         }
     }
@@ -1345,7 +1356,7 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(condition, ifExpression, elseExpression);
         }
     }
@@ -1366,7 +1377,7 @@ public sealed interface ExpressionDef
                   Map<Constant, ? extends ExpressionDef> cases,
                   ExpressionDef defaultCase) implements ExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             List<ExpressionDef> result = new ArrayList<>();
             result.add(expression);
             result.add(defaultCase);
@@ -1385,8 +1396,8 @@ public sealed interface ExpressionDef
     @Experimental
     record SwitchYieldCase(TypeDef type, StatementDef statement) implements ExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.emptyList();
+        public List<? extends ExpressionDef> expressions() {
+            return List.of();
         }
     }
 
@@ -1401,8 +1412,8 @@ public sealed interface ExpressionDef
     @Experimental
     record NewArrayOfSize(TypeDef.Array type, int size) implements ExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.emptyList();
+        public List<? extends ExpressionDef> expressions() {
+            return List.of();
         }
     }
 
@@ -1418,7 +1429,7 @@ public sealed interface ExpressionDef
     record NewArrayInitialized(TypeDef.Array type,
                                List<? extends ExpressionDef> expressions) implements ExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return expressions;
         }
     }
@@ -1441,8 +1452,8 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(instance);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(instance);
         }
     }
 
@@ -1462,8 +1473,8 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(instance);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(instance);
         }
     }
 
@@ -1483,8 +1494,8 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(instance);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(instance);
         }
     }
 
@@ -1500,7 +1511,7 @@ public sealed interface ExpressionDef
     record EqualsStructurally(ExpressionDef instance,
                               ExpressionDef other) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(instance, other);
         }
     }
@@ -1517,7 +1528,7 @@ public sealed interface ExpressionDef
     record NotEqualsStructurally(ExpressionDef instance,
                                  ExpressionDef other) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(instance, other);
         }
     }
@@ -1534,7 +1545,7 @@ public sealed interface ExpressionDef
     record EqualsReferentially(ExpressionDef instance,
                                ExpressionDef other) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(instance, other);
         }
     }
@@ -1551,7 +1562,7 @@ public sealed interface ExpressionDef
     record NotEqualsReferentially(ExpressionDef instance,
                                  ExpressionDef other) implements ConditionExpressionDef {
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(instance, other);
         }
     }
@@ -1574,8 +1585,8 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.singletonList(expression);
+        public List<? extends ExpressionDef> expressions() {
+            return List.of(expression);
         }
     }
 
@@ -1617,7 +1628,7 @@ public sealed interface ExpressionDef
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
+        public List<? extends ExpressionDef> expressions() {
             return List.of(expression, indexExpression);
         }
     }
@@ -1625,19 +1636,19 @@ public sealed interface ExpressionDef
     /**
      * A type that represents a lambda.
      *
-     * @param type The type of the lambda, e.g. {@code Function<String, String>}
-     * @param method The lambda method implementation
-     * @param overriddenMethod The method signature as defined in the interface,
-     *                         e.g. {@code Object apply(Object)}
-     *                         for {@link java.util.function.Function} implementation
+     * @param type           The type of the lambda, e.g. {@code Function<String, String>}
+     * @param target         The target method as defined in the interface,
+     *                       e.g. {@code Object apply(Object)}
+     *                       for {@link Function} implementation
+     * @param implementation The lambda method implementation
      * @author Andriy Dmytruk
      * @since 1.7
      */
     @Experimental
     record Lambda(
         ClassTypeDef type,
-        MethodDef method,
-        MethodDef overriddenMethod
+        MethodDef target,
+        MethodDef implementation
     ) implements ExpressionDef {
 
         /**
@@ -1647,16 +1658,16 @@ public sealed interface ExpressionDef
          * @param bodyBuilder The builder for the lambda body
          * @return The lambda
          */
-        public static Lambda extend(ClassTypeDef typeDef, MethodBodyBuilder bodyBuilder) {
+        public static Lambda of(ClassTypeDef typeDef, MethodBodyBuilder bodyBuilder) {
             ClassTypeDef rawType = typeDef;
             if (rawType instanceof ClassTypeDef.Parameterized parameterized) {
                 rawType = parameterized.rawType();
             }
 
             if (rawType instanceof ClassElementType classElement) {
-                return extend(classElement.classElement(), bodyBuilder);
+                return of(classElement.classElement(), bodyBuilder);
             } else if (typeDef instanceof ClassDefType classDef) {
-                return extend(typeDef, classDef.objectDef(), bodyBuilder);
+                return of(typeDef, classDef.objectDef(), bodyBuilder);
             } else {
                 throw new UnsupportedOperationException("Can extend lambda only from ClassTypeDef that was " +
                     "created from ObjectDef or a ClassElement. Use constructor otherwise.");
@@ -1671,55 +1682,62 @@ public sealed interface ExpressionDef
          * @param bodyBuilder The builder for the lambda body
          * @return The lambda
          */
-        public static Lambda extend(ClassTypeDef lambdaType, ObjectDef lambdaTypeDef, MethodBodyBuilder bodyBuilder) {
-            List<MethodDef> abstractMethods = lambdaTypeDef.getMethods()
-                .stream().filter(v -> v.getModifiers().contains(Modifier.ABSTRACT)).toList();
-            if (abstractMethods.size() != 1) {
-                throw new IllegalArgumentException("Parent of a lambda should have exactly one " +
-                    "abstract method but has " + abstractMethods.size());
+        public static Lambda of(ClassTypeDef lambdaType, ObjectDef lambdaTypeDef, MethodBodyBuilder bodyBuilder) {
+            List<MethodDef> methods = lambdaTypeDef.getMethods()
+                .stream()
+                .filter(v -> v.getModifiers().contains(Modifier.ABSTRACT))
+                .toList();
+            if (methods.isEmpty()) {
+                methods = lambdaTypeDef.getMethods()
+                    .stream()
+                    .filter(v -> !v.getModifiers().contains(Modifier.FINAL))
+                    .toList();
             }
-            MethodDef method = abstractMethods.get(0);
-            MethodDefBuilder builder = MethodDef.builder(method.getName())
-                .returns(method.getReturnType())
-                .addParameters(method.getParameters());
-            return new Lambda(lambdaType, builder.build(bodyBuilder), method);
+            if (methods.size() != 1) {
+                throw new IllegalArgumentException("Parent of a lambda should have exactly one " +
+                    "abstract method but has " + methods.size());
+            }
+            return of(lambdaType, methods.get(0), bodyBuilder);
         }
 
         /**
          * Create a lambda that extends a particular type.
          *
-         * @param parent The parent to extend from
+         * @param lambdaType   The type of lambda
+         * @param lambdaMethod The lambda method
+         * @param bodyBuilder  The builder for the lambda body
+         * @return The lambda
+         */
+        private static Lambda of(ClassTypeDef lambdaType, MethodDef lambdaMethod, MethodBodyBuilder bodyBuilder) {
+            return new Lambda(
+                lambdaType,
+                lambdaMethod, MethodDef.builder(lambdaMethod.getName())
+                    .returns(lambdaMethod.getReturnType())
+                    .addParameters(lambdaMethod.getParameters())
+                    .build(bodyBuilder)
+            );
+        }
+
+        /**
+         * Create a lambda that extends a particular type.
+         *
+         * @param lambdaClassElement The parent to extend from
          * @param bodyBuilder The builder for the lambda body
          * @return The lambda
          */
-        public static Lambda extend(ClassElement parent, MethodBodyBuilder bodyBuilder) {
-            List<MethodElement> abstractMethods = parent.getEnclosedElements(
+        public static Lambda of(ClassElement lambdaClassElement, MethodBodyBuilder bodyBuilder) {
+            List<MethodElement> abstractMethods = lambdaClassElement.getEnclosedElements(
                 ElementQuery.of(MethodElement.class).onlyAbstract());
             if (abstractMethods.size() != 1) {
                 throw new IllegalArgumentException("Parent of a lambda should have exactly one " +
                     "abstract method but has " + abstractMethods.size());
             }
-            MethodElement method = abstractMethods.get(0);
-            MethodDefBuilder builder = MethodDef.builder(method.getName())
-                // Make sure that it is not a generic, but a deduced type
-                .returns(TypeDef.of(method.getGenericReturnType().getName()));
-            for (ParameterElement parameter : method.getParameters()) {
-                builder.addParameter(ParameterDef.of(parameter.getName(),
-                    TypeDef.of(parameter.getGenericType().getName())));
-            }
-
-            MethodDefBuilder overridden = MethodDef.builder(method.getName())
-                .returns(TypeDef.of(method.getReturnType().getRawClassElement()));
-            for (ParameterElement parameter : method.getParameters()) {
-                overridden.addParameter(ParameterDef.of(parameter.getName(),
-                    TypeDef.of(parameter.getType().getRawClassElement())));
-            }
-            return new Lambda(ClassTypeDef.of(parent), builder.build(bodyBuilder), overridden.build());
+            return of(ClassTypeDef.of(lambdaClassElement), MethodDef.of(abstractMethods.get(0)), bodyBuilder);
         }
 
         @Override
-        public Collection<? extends ExpressionDef> operands() {
-            return Collections.emptyList();
+        public List<? extends ExpressionDef> expressions() {
+            return List.of();
         }
     }
 
